--- a/src/App.css
+++ b/src/App.css
@@ -194,6 +194,9 @@ h1, .h1{
 .banner-form-sec .form-control{
   min-width: 334px;
 }
+.no-of-ads label{
+  font-size: 15px;color: white;
+}
 .banner-form-sec .btn{
   font-size: 16px;
 }
@@ -289,8 +292,13 @@ height: 100vh;
 .more-settings.active  .btn{
   width: 100%;text-align: center;justify-content: center;
 }
+.more-settings .form-control{
+  padding: 10px;
+}
 .ross{
-  cursor: pointer;padding-right: 10px;
+  cursor: pointer;padding-right: 18px;position: absolute;
+  right: 00px;
+  top: 30px;
 }
 
 .settings-inner{
@@ -300,7 +308,7 @@ input:focus{
   outline: none !important;
 }
 .outer-more-settings{
-  width: 250px;
+  width: 350px;
 }
 .btm-shadow{
 background: -webkit-linear-gradient(#eee, #333);
@@ -310,6 +318,9 @@ background: -webkit-linear-gradient(#eee, #333);
 }
 body.hidden #root{
   height: 0px;overflow: hidden;
+}
+.warning{
+  font-size: 13.4px;
 }
 @media(min-width:1200px){
   .footer{
